# django-react-boilerplate

./: .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  schema.yml
.github/workflows/: ci.yml
backend/: manage.py
backend/core/: adapters.py  apps.py  asgi.py  context_processors.py  encoders.py  middleware.py  signals.py  sites.py  urls.py  views.py  widgets.py  wsgi.py
backend/core/admin/: __init__.py  base.py  celery_beat.py  constance.py  dashboard.py  user.py
backend/core/api/: serializers.py  views.py
backend/core/forms/: __init__.py  auth.py
backend/core/models/: __init__.py  base.py  user.py
backend/core/resources/: __init__.py  user.py
backend/core/settings/: base.py  development.py  logging.py  production.py  unfold.py
backend/templates/admin/: base_site.html  index.html
backend/templates/core/: support.html
backend/templates/game/: index.html
backend/templates/game/helpers/: preloader.html
backend/templates/game/layouts/: base_vite.html
docker/: docker-compose.prod.yml  docker-compose.yml
docker/django/: Dockerfile
docker/react/: Dockerfile
docs/: DOCKER.md  README.md
frontend/: vite.config.js
frontend/src/: App.jsx
scripts/: clean_cache_directories.sh  convert_images_to_webp.sh  customize.py  delete_migrations.sh
tests/: test_setup.py
